test/typecheck/fail/unscope_val.sail
$option -dmagic_hash

$project# A {}

default Order dec

$include <prelude.sail>

$start_module# A

val foo : unit -> unit

$end_module# A

function foo() = ()
